--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDVHGMX234"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SDVHGMX234');
+    </script>
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <!-- Remaining -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -176,6 +191,14 @@
             }
         }
 
+
+        @media (max-width: 319px){      /* ← don’t forget “px”! */
+            .profile-img{
+                width: 90px;
+                height: 90px;
+            }
+        }
+
         .bio {
             font-size: 0.95rem;
             text-align: justify;
@@ -223,13 +246,45 @@
             padding: 40px 0;
             margin-top: 60px;
             border-top: 1px solid var(--line-color);
-            font-size: 0.9rem;
+            font-size: 0.7rem;
         }
 
         .contact-link {
             color: var(--accent-color);
             text-decoration: none;
             font-weight: 500;
+        }
+
+        /* ==== tiny-screen error overlay =================================== */
+        #size-error{
+            /* full-screen overlay */
+            position: fixed; inset: 0;
+            display: none;              /* ← shown only in media query */
+            z-index: 9999;
+
+            /* look & feel */
+            background: #fff;
+            color: var(--primary-color);
+            font-family: 'Lora','Georgia',serif;
+            font-size: 0.6rem;
+            line-height: 1.4;
+            padding: 40px 30px;
+            text-align: center;
+
+            /* small visual polish */
+            box-shadow: 0 0 20px rgba(0,0,0,.15);
+        }
+
+        /* === trigger when viewport < 259 px =============================== */
+        @media (max-width: 259px){
+            #size-error{ display:flex;          /* show overlay            */
+                        align-items:center;
+                        justify-content:center; }
+
+            /* optionally hide the real page underneath the overlay */
+            .container,
+            .action-links,
+            footer{ display:none; }
         }
 
         /* ------- language switcher ------- */
@@ -251,6 +306,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="size-error">
+        Bu siteyi görüntülemek için ekran genişliğinizin <strong>en az 320 piksel</strong> olması gerekiyor. Lütfen bir başka cihazdan deneyiniz.
+    </div>
+
     <div class="container">
 
         <section class="bio-section">
@@ -302,7 +361,7 @@
                 name: "Ekin Gökçe ve Kemal'in Düğünü",
                 position: "Lorem ipsum dolor sit amet.",
                 bio1: `Lorem ipsum dolor sit amet.`,
-                rsvp: "LCV Ara",
+                rsvp: "LCV İletişim",
                 location: "Konum",
                 photos: "Fotoğraflar",
                 footer_p1: "© 2025 Çiçek & İnecik Aileleri.<br>Tüm hakları saklıdır.",
