--- a/index.html
+++ b/index.html
@@ -331,20 +331,22 @@
 
         <!-- ==================== Subtle Action Buttons ==================== -->
         <div class="action-links">
-            <!-- Shared photo album -->
-            <a href="https://drive.google.com/drive/folders/12VRaXiVZm_cN0YpMr3OLmcd45qiplJoZ?usp=sharing" class="action-link" target="_blank" data-i18n="photos"></a>
+            <!-- LCV / RSVP phone call -->
+            <a href="tel:+903129111379" class="action-link" data-i18n="rsvp"></a>
             <!-- Venue location link (Google Maps) -->
             <a href="https://maps.app.goo.gl/8tifkPKuV3xDnzbL9" class="action-link" target="_blank" data-i18n="location"></a>
             <!-- Satır kırıcı -->
             <span class="action-break"></span>
-            <!-- LCV / RSVP phone call -->
-            <a href="tel:+903129111379" class="action-link" data-i18n="rsvp"></a>
-            <!-- NEW: Add‑to‑Calendar button -->
-            <!-- <a href="#" id="calendar-btn" class="action-link" data-i18n="calendar"></a> -->
-            <a href="invite/wedding.ics"
-                id="calendar-btn"
+            <!-- Shared photo album -->
+            <a href="https://drive.google.com/drive/folders/12VRaXiVZm_cN0YpMr3OLmcd45qiplJoZ?usp=sharing" class="action-link" target="_blank" data-i18n="photos"></a>
+            <!-- WhatsApp chat link -->
+            <a href="https://wa.me/905065870608?text=Merhaba.%20D%C3%BC%C4%9F%C3%BCn%C3%BCn%C3%BCzde%20%C3%A7ekti%C4%9Fimiz%20foto%C4%9Fraflar%C4%B1%20sizlerle%20payla%C5%9Fmaktan%20b%C3%BCy%C3%BCk%20mutluluk%20duyuyoruz.%20G%C3%B6r%C3%BCnt%C3%BC%20kalitesini%20korumak%20ad%C4%B1na%20WhatsApp%E2%80%99taki%20%22Y%C3%BCksek%20Kaliteli%20G%C3%B6nder%22%20se%C3%A7ene%C4%9Fini%20kulland%C4%B1k.%20Keyifle%20incelemenizi%20diler%2C%20sizlere%20bir%20%C3%B6m%C3%BCr%20boyu%20mutluluklar%20temenni%20ederiz.%20Sevgiler."
                 class="action-link"
-                data-i18n="calendar"></a>
+                target="_blank"
+                data-i18n="whatsapp">
+            </a>
+            <!-- Add‑to‑Calendar button -->
+            <a href="invite/wedding.ics" id="calendar-btn" class="action-link" data-i18n="calendar"></a>
         </div>
 
         <!-- =============== Countdown Timer (appears above footer) =============== -->
@@ -467,8 +469,8 @@
                 bio1: "",
                 rsvp: "LCV İletişim",
                 location: "Konum",
-                photos: "Fotoğraflar",
-                website: "Site",
+                photos: "Fotoğrafları Gör",
+                whatsapp: "Fotoğraf Paylaş",
                 calendar: "Takvime Ekle",
                 footer_p1: "© 2025 Çiçek & İnecik Aileleri.<br>Tüm hakları saklıdır.",
             },
