--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <section class="faq-section" id="faq">
         
             <div class="faq-item">
-                <div class="faq-question">Tanışma hikâyeniz nedir?</div>
+                <div class="faq-question">Tanışma hikâyemiz nedir?</div>
                 <div class="faq-answer">
                     Tanışma sürecimizin kısa özeti burada paylaşılacaktır.
                 </div>
