--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             --accent-color: #59684d;
             --text-color: #59684d;
             --footer-color: #727f80;
-            --faq-answer-color: #a0b3b5;
+            --faq-answer-color: #9aabae;
             --light-gray: #edf0f0;
             --line-color: #bcd2d5;
             --transition-speed: 0.2s;
@@ -246,7 +246,7 @@
         .countdown{    
             text-align:center;
             color:var(--footer-color);
-            font-size:0.7rem;
+            font-size:0.75rem;
             margin-top:40px;
         }
 
@@ -256,7 +256,7 @@
             padding: 40px 0;
             margin-top: 40px;
             border-top: 1px solid var(--line-color);
-            font-size: 0.7rem;
+            font-size: 0.75rem;
         }
 
         .contact-link {
@@ -325,7 +325,7 @@
         }
         .faq-question{
             font-family:'Lora','Georgia',serif;
-            font-size:0.7rem;
+            font-size:0.75rem;
             padding:4px 4px 4px 0;
             cursor:pointer;
             position:relative;
@@ -345,12 +345,13 @@
         .faq-answer{
             max-height:0;
             overflow:hidden;
-            font-size:0.7rem;
-            line-height:1.2;
+            font-size:0.75rem;
+            line-height:1.4;
             color:var(--faq-answer-color);
-            opacity:1.0;             
+            opacity:0.9;             
             transition:max-height 0.25s ease;
             padding-right:22px;                         /* artının altından kaçmasın */
+            padding-left:11px
         }
         .faq-item.open .faq-answer{max-height:500px;}   /* yeterli bir tavan */
 
