--- a/index.html
+++ b/index.html
@@ -351,9 +351,11 @@
             opacity:0.9;             
             transition:max-height 0.25s ease;
             padding-right:22px;                         /* artının altından kaçmasın */
-            padding-left:11px
+            padding-left:11px;
+            text-align: justify;  
+            text-align-last: left;
         }
-        .faq-item.open .faq-answer{max-height:500px;}   /* yeterli bir tavan */
+        .faq-item.open .faq-answer{max-height:900px;}   /* yeterli bir tavan */
 
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap" rel="stylesheet">
@@ -413,14 +415,14 @@
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Etkinlik programı nasıl planlandı?</div>
+                <div class="faq-question">Günün akışı nasıl olacak?</div>
                 <div class="faq-answer">
                     Karşılama, nikâh töreni, akşam yemeği ve eğlence saatleri burada belirtilecektir.
                 </div>
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Menüde neler olacak?</div>
+                <div class="faq-question">Soframızda hangi tatlar yer alacak?</div>
                 <div class="faq-answer">
                     Başlangıç, ana yemek, tatlı ve özel diyet seçenekleri buraya eklenecektir.
                 </div>
@@ -441,6 +443,26 @@
                 <div class="faq-question">Otopark olanakları nelerdir?</div>
                 <div class="faq-answer">
                     Mekâna ait otopark ve vale hizmeti ayrıntıları burada yer alacaktır.
+                </div>
+            </div>
+
+            <!-- ▸ Neden Divan Çukurhan?  -->
+            <div class="faq-item">
+                <div class="faq-question">Divan Çukurhan’ı neden seçtik?</div>
+                <div class="faq-answer">
+                    Ocak ayında paylaştığımız
+                    <a href="https://www.instagram.com/p/DE7-6jwoh_g/?utm_source=ig_web_copy_link&amp;igsh=MzRlODBiNWFlZA==" 
+                    target="_blank" rel="noopener"
+                    style="font-weight:700; color:inherit; text-decoration:underline dotted currentColor;">
+                        Instagram gönderisinde
+                    </a>
+                    de yazdığımız üzere:
+                    <!-- “ben” anlatımından “biz”e çevrilmiş metin  -->
+                    "Çukurhan’ın, 16.&nbsp;yüzyıldan kalma, zamana meydan okuyan taş duvarları, kasım ayının solgun ışıklarında bir zamanlar geçmişte kalan hayatların gölgelerini fısıldar gibi; sessiz, hüzünlü, fakat bir o kadar da vakur.
+                    Bu eşsiz hanın avlusunda yankılanan adımlarımız, düğünümüz için hazırlıklara başlarken, bir yandan da bu tarihi mekânın her köşesinde asırlar boyu süzülmüş yaşamların izini sürer. Serin kış gününün ince rüzgârı, hanın içine süzülen güneş ışığı ile kucaklaşırken, burada geçen zamanın nasıl da farklı bir boyuta ulaştığını hissediyoruz: her bir saniye, sanki ebediyetin kapılarını aralar gibi, hem hızlı hem de sonsuz bir ağırlıkta.
+                    İşte bu yüzden, Çukurhan’ı seçtik düğünümüz için: bu han, yalnızca tarihi bir yapı olmanın ötesinde, geçmiş ile gelecek arasında bir köprü, kırgın ama bir o kadar da umut dolu bir mekân. Çünkü burası, sevinç ve hüzün gibi insani duyguların, yıllar boyu süregelen bir birikimin, taşlar arasında hapsolmuş çığlıkların ve fısıltıların saklandığı bir yer.
+                    Haziran ayında burada gerçekleşecek olan düğünümüz, hanın duvarlarına kazınmış yüzlerce yıllık hikâyelere yepyeni bir anlatı ekleyecek; tıpkı bir ressamın tuvaline son dokunuşlarını yapması gibi, hem titizlikle hem de büyük bir aşkla.
+                    Düğünümüzün yapılacağı gün, Çukurhan’ın avlusunda, ağır taş sütunlar arasında süzülen ışık, misafirlerin yüzlerinde eski zamanların hikâyelerini canlandırırken, biz de yeni bir başlangıç yapacağız. Bu özel gün, hanın gördüğü nice mutlu ve hüzünlü günlerden sadece biri olacak ama belki de en kıymetlisi, çünkü hikâyemiz bu tarihi mekânın duvarları arasında, zamana meydan okuyan bir aşkın yepyeni bir yankısı olarak kalacak."
                 </div>
             </div>
 
