--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Çektiğimiz fotoğrafları nasıl paylaşabiliriz?</div>
+                <div class="faq-question">Çektiğiniz fotoğrafları nasıl paylaşabilirsiniz?</div>
                 <div class="faq-answer">
                     Sayfanın üst kısmındaki <strong>“Fotoğraf Paylaş”</strong> butonuna tıklayarak
                     <strong>sizin çektiğiniz</strong> fotoğraf ve videoları da bize iletebilirsiniz.  
@@ -448,15 +448,12 @@
 
             <!-- ▸ Neden Divan Çukurhan?  -->
             <div class="faq-item">
-                <div class="faq-question">Divan Çukurhan’ı neden seçtik?</div>
+                <div class="faq-question">Divan Çukurhan'ı neden seçtik?</div>
                 <div class="faq-answer">
                     Ocak ayında paylaştığımız
                     <a href="https://www.instagram.com/p/DE7-6jwoh_g/?utm_source=ig_web_copy_link&amp;igsh=MzRlODBiNWFlZA==" 
-                    target="_blank" rel="noopener"
-                    style="font-weight:700; color:inherit; text-decoration:underline dotted currentColor;">
-                        Instagram gönderisinde
-                    </a>
-                    de yazdığımız üzere:
+                    target="_blank" rel="noopener" style="font-weight:700; color:inherit;">
+                    Instagram gönderisinde</a> de yazdığımız üzere:
                     <!-- “ben” anlatımından “biz”e çevrilmiş metin  -->
                     "Çukurhan’ın, 16.&nbsp;yüzyıldan kalma, zamana meydan okuyan taş duvarları, kasım ayının solgun ışıklarında bir zamanlar geçmişte kalan hayatların gölgelerini fısıldar gibi; sessiz, hüzünlü, fakat bir o kadar da vakur.
                     Bu eşsiz hanın avlusunda yankılanan adımlarımız, düğünümüz için hazırlıklara başlarken, bir yandan da bu tarihi mekânın her köşesinde asırlar boyu süzülmüş yaşamların izini sürer. Serin kış gününün ince rüzgârı, hanın içine süzülen güneş ışığı ile kucaklaşırken, burada geçen zamanın nasıl da farklı bir boyuta ulaştığını hissediyoruz: her bir saniye, sanki ebediyetin kapılarını aralar gibi, hem hızlı hem de sonsuz bir ağırlıkta.
