--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             --primary-color: #59684d;
             --accent-color: #59684d;
             --text-color: #59684d;
-            --footer-color: #727f80;
-            --faq-answer-color: #9aabae;
+            --footer-color: #5a6566;
+            --faq-answer-color: #7d8c8e;
             --light-gray: #edf0f0;
             --line-color: #bcd2d5;
             --transition-speed: 0.2s;
@@ -348,7 +348,7 @@
             font-size:0.75rem;
             line-height:1.4;
             color:var(--faq-answer-color);
-            opacity:0.9;             
+            opacity:0.85;             
             transition:max-height 0.25s ease;
             padding-right:22px;                         /* artının altından kaçmasın */
             padding-left:11px;
