--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             --primary-color: #59684d;
             --accent-color: #59684d;
             --text-color: #59684d;
-            --footer-color: #5a6566;
+            --footer-color: #657274;
             --faq-answer-color: #3f4748;
             --light-gray: #edf0f0;
             --line-color: #bcd2d5;
@@ -348,10 +348,10 @@
             font-size:0.7rem;
             line-height:1.4;
             color:var(--footer-color);
-            opacity:0.90;             
+            opacity:1.0;             
             transition:max-height 0.25s ease;
-            padding-right:22px;                         /* artının altından kaçmasın */
-            padding-left:11px;
+            padding-right:20px;                         /* artının altından kaçmasın */
+            padding-left:20px;
             text-align: justify;  
             text-align-last: left;
         }
