--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             --faq-answer-color: #3f4748;
             --light-gray: #edf0f0;
             --line-color: #bcd2d5;
-            --transition-speed: 0.2s;
+            --transition-speed: 0.0s;
 
             --hex-w: 800px;                 /*  ➜ change here if SVG size changes           */
             --hex-h: calc(var(--hex-w)*0.8660254038);   /* √3 / 2 * width                    */
@@ -153,7 +153,7 @@
           background-image:url("images/frame-flowers.svg");
           background-repeat:repeat;
           background-size:var(--hex-sx) var(--hex-sy);
-          transition:transform .2s ease;
+          transition:transform 0s ease;
         }
 
 
