--- a/index.html
+++ b/index.html
@@ -403,7 +403,8 @@
             <div class="faq-item">
                 <div class="faq-question">Tanışma hikâyemiz nedir?</div>
                 <div class="faq-answer">
-                    Tanışma sürecimizin kısa özeti burada paylaşılacaktır.
+                    Üniversitenin kalabalık koridorlarında başlayan muhabbetimiz, Ankara’nın kahve kokulu duraklarında demlenerek; sınav telaşından mezuniyet coşkusuna, şehrin tarihi sokaklarından gece yarısı yürüyüşlerine uzanan yıllarda sonunda sevgi dolu bir aşka dönüştü.  
+                    Mezuniyet sonrasında valizlerimizi Avrupa’ya taşıdık; şimdi ise düğünümüz için Ankara’ya dönüyor ve hikâyemizin ilk sayfalarında yer alan dostlarımızla bu özel günde yeniden buluşmanın heyecanını yaşıyoruz.
                 </div>
             </div>
 
@@ -450,16 +451,16 @@
             <div class="faq-item">
                 <div class="faq-question">Divan Çukurhan'ı neden seçtik?</div>
                 <div class="faq-answer">
-                    <em>Ocak ayında paylaştığımız
+                    <em>Kasım ayında paylaştığımız
                     <a href="https://www.instagram.com/p/DE7-6jwoh_g/?utm_source=ig_web_copy_link&amp;igsh=MzRlODBiNWFlZA==" 
                     target="_blank" rel="noopener" style="font-weight:700; color:inherit;">
                     Instagram gönderisinde</a> de yazdığımız üzere:</em>
                     <!-- “ben” anlatımından “biz”e çevrilmiş metin  -->
-                    "Çukurhan’ın, 16.&nbsp;yüzyıldan kalma, zamana meydan okuyan taş duvarları, kasım ayının solgun ışıklarında bir zamanlar geçmişte kalan hayatların gölgelerini fısıldar gibi; sessiz, hüzünlü, fakat bir o kadar da vakur.
+                    <p>"Çukurhan’ın, 16.&nbsp;yüzyıldan kalma, zamana meydan okuyan taş duvarları, kasım ayının solgun ışıklarında bir zamanlar geçmişte kalan hayatların gölgelerini fısıldar gibi; sessiz, hüzünlü, fakat bir o kadar da vakur.
                     Bu eşsiz hanın avlusunda yankılanan adımlarımız, düğünümüz için hazırlıklara başlarken, bir yandan da bu tarihi mekânın her köşesinde asırlar boyu süzülmüş yaşamların izini sürer. Serin kış gününün ince rüzgârı, hanın içine süzülen güneş ışığı ile kucaklaşırken, burada geçen zamanın nasıl da farklı bir boyuta ulaştığını hissediyoruz: her bir saniye, sanki ebediyetin kapılarını aralar gibi, hem hızlı hem de sonsuz bir ağırlıkta.
                     İşte bu yüzden, Çukurhan’ı seçtik düğünümüz için: bu han, yalnızca tarihi bir yapı olmanın ötesinde, geçmiş ile gelecek arasında bir köprü, kırgın ama bir o kadar da umut dolu bir mekân. Çünkü burası, sevinç ve hüzün gibi insani duyguların, yıllar boyu süregelen bir birikimin, taşlar arasında hapsolmuş çığlıkların ve fısıltıların saklandığı bir yer.
                     Haziran ayında burada gerçekleşecek olan düğünümüz, hanın duvarlarına kazınmış yüzlerce yıllık hikâyelere yepyeni bir anlatı ekleyecek; tıpkı bir ressamın tuvaline son dokunuşlarını yapması gibi, hem titizlikle hem de büyük bir aşkla.
-                    Düğünümüzün yapılacağı gün, Çukurhan’ın avlusunda, ağır taş sütunlar arasında süzülen ışık, misafirlerin yüzlerinde eski zamanların hikâyelerini canlandırırken, biz de yeni bir başlangıç yapacağız. Bu özel gün, hanın gördüğü nice mutlu ve hüzünlü günlerden sadece biri olacak ama belki de en kıymetlisi, çünkü hikâyemiz bu tarihi mekânın duvarları arasında, zamana meydan okuyan bir aşkın yepyeni bir yankısı olarak kalacak."
+                    Düğünümüzün yapılacağı gün, Çukurhan’ın avlusunda, ağır taş sütunlar arasında süzülen ışık, misafirlerin yüzlerinde eski zamanların hikâyelerini canlandırırken, biz de yeni bir başlangıç yapacağız. Bu özel gün, hanın gördüğü nice mutlu ve hüzünlü günlerden sadece biri olacak ama belki de en kıymetlisi, çünkü hikâyemiz bu tarihi mekânın duvarları arasında, zamana meydan okuyan bir aşkın yepyeni bir yankısı olarak kalacak."</p>
                 </div>
             </div>
 
