--- a/index.html
+++ b/index.html
@@ -403,15 +403,17 @@
             <div class="faq-item">
                 <div class="faq-question">Tanışma hikâyemiz nedir?</div>
                 <div class="faq-answer">
-                    Üniversitenin kalabalık koridorlarında başlayan muhabbetimiz, Ankara’nın kahve kokulu duraklarında demlenerek; sınav telaşından mezuniyet coşkusuna, şehrin tarihi sokaklarından gece yarısı yürüyüşlerine uzanan yıllarda sonunda sevgi dolu bir aşka dönüştü.  
-                    Mezuniyet sonrasında valizlerimizi Avrupa’ya taşıdık; şimdi ise düğünümüz için Ankara’ya dönüyor ve hikâyemizin ilk sayfalarında yer alan dostlarımızla bu özel günde yeniden buluşmanın heyecanını yaşıyoruz.
+                    <em>Üniversitenin kalabalık koridorlarında</em> başlayan muhabbetimiz, Ankara’nın kahve kokulu duraklarında demlenerek; sınav telaşından mezuniyet coşkusuna, şehrin tarihi sokaklarından gece yarısı yürüyüşlerine uzanan yıllarda sonunda <strong>sevgi dolu bir aşka</strong> dönüştü.  
+                    Mezuniyet sonrasında <strong>valizlerimizi Avrupa’ya taşıdık</strong>; şimdi ise düğünümüz için Ankara’ya dönüyor ve <em>hikâyemizin ilk sayfalarında yer alan dostlarımızla</em> bu özel günde yeniden buluşmanın heyecanını yaşıyoruz.
                 </div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">Biz kimiz ve nelerle meşgulüz?</div>
                 <div class="faq-answer">
-                    Kim olduğumuz ve mesleki yolculuğumuzun kısa özeti burada yer alacaktır.
+                    Ekin Gökçe ve Kemal, Almanya'daki Helmholtz Munich Enstitüsü’nde araştırmacı olarak çalışmakta olup, <em>eş zamanlı olarak</em> Technische Universität München (TUM) bünyesinde doktora çalışmalarını sürdürmektedirler. 
+                    Kemal, <strong>yapay zekâ</strong> ve makine öğrenimi tabanlı yöntemler geliştirerek biyolojik verilerden anlamlı öngörüler elde etmeye odaklanmaktadır. 
+                    Ekin ise <strong>kök hücre</strong> biyolojisi ve rejeneratif tıp alanında çalışmakta; özellikle Tip 1 diyabet için kök hücre temelli tedavi yaklaşıları üzerine yoğunlaşmaktadır.
                 </div>
             </div>
 
@@ -443,7 +445,8 @@
             <div class="faq-item">
                 <div class="faq-question">Otopark olanakları nelerdir?</div>
                 <div class="faq-answer">
-                    Mekâna ait otopark ve vale hizmeti ayrıntıları burada yer alacaktır.
+                    Mekânın hemen yakınında, yürüyüş mesafesinde <strong>iki ayrı açık otopark</strong> mevcuttur.  
+                    <em>Otopark ücretleri ve kapasite bilgileri yakında paylaşılacaktır.</em>
                 </div>
             </div>
 
@@ -451,16 +454,16 @@
             <div class="faq-item">
                 <div class="faq-question">Divan Çukurhan'ı neden seçtik?</div>
                 <div class="faq-answer">
-                    <em>Kasım ayında paylaştığımız
+                    Kasım ayında paylaştığımız
                     <a href="https://www.instagram.com/p/DE7-6jwoh_g/?utm_source=ig_web_copy_link&amp;igsh=MzRlODBiNWFlZA==" 
                     target="_blank" rel="noopener" style="font-weight:700; color:inherit;">
-                    Instagram gönderisinde</a> de yazdığımız üzere:</em>
+                    Instagram gönderisinde</a> de yazdığımız üzere:
                     <!-- “ben” anlatımından “biz”e çevrilmiş metin  -->
-                    <p>"Çukurhan’ın, 16.&nbsp;yüzyıldan kalma, zamana meydan okuyan taş duvarları, kasım ayının solgun ışıklarında bir zamanlar geçmişte kalan hayatların gölgelerini fısıldar gibi; sessiz, hüzünlü, fakat bir o kadar da vakur.
-                    Bu eşsiz hanın avlusunda yankılanan adımlarımız, düğünümüz için hazırlıklara başlarken, bir yandan da bu tarihi mekânın her köşesinde asırlar boyu süzülmüş yaşamların izini sürer. Serin kış gününün ince rüzgârı, hanın içine süzülen güneş ışığı ile kucaklaşırken, burada geçen zamanın nasıl da farklı bir boyuta ulaştığını hissediyoruz: her bir saniye, sanki ebediyetin kapılarını aralar gibi, hem hızlı hem de sonsuz bir ağırlıkta.
-                    İşte bu yüzden, Çukurhan’ı seçtik düğünümüz için: bu han, yalnızca tarihi bir yapı olmanın ötesinde, geçmiş ile gelecek arasında bir köprü, kırgın ama bir o kadar da umut dolu bir mekân. Çünkü burası, sevinç ve hüzün gibi insani duyguların, yıllar boyu süregelen bir birikimin, taşlar arasında hapsolmuş çığlıkların ve fısıltıların saklandığı bir yer.
-                    Haziran ayında burada gerçekleşecek olan düğünümüz, hanın duvarlarına kazınmış yüzlerce yıllık hikâyelere yepyeni bir anlatı ekleyecek; tıpkı bir ressamın tuvaline son dokunuşlarını yapması gibi, hem titizlikle hem de büyük bir aşkla.
-                    Düğünümüzün yapılacağı gün, Çukurhan’ın avlusunda, ağır taş sütunlar arasında süzülen ışık, misafirlerin yüzlerinde eski zamanların hikâyelerini canlandırırken, biz de yeni bir başlangıç yapacağız. Bu özel gün, hanın gördüğü nice mutlu ve hüzünlü günlerden sadece biri olacak ama belki de en kıymetlisi, çünkü hikâyemiz bu tarihi mekânın duvarları arasında, zamana meydan okuyan bir aşkın yepyeni bir yankısı olarak kalacak."</p>
+                    <p>"Çukurhan’ın, <strong>16.&nbsp;yüzyıldan kalma</strong>, zamana meydan okuyan taş duvarları, kasım ayının solgun ışıklarında bir zamanlar geçmişte kalan hayatların gölgelerini fısıldar gibi; <em>sessiz, hüzünlü, fakat bir o kadar da vakur</em>.
+                    Bu eşsiz hanın avlusunda yankılanan adımlarımız, düğünümüz için hazırlıklara başlarken, bir yandan da bu tarihi mekânın her köşesinde asırlar boyu süzülmüş yaşamların izini sürer. Serin kış gününün ince rüzgârı, hanın içine süzülen güneş ışığı ile kucaklaşırken, burada geçen zamanın nasıl da farklı bir boyuta ulaştığını hissediyoruz: <em>her bir saniye, sanki ebediyetin kapılarını aralar gibi, hem hızlı hem de sonsuz bir ağırlıkta</em>.
+                    <strong>İşte bu yüzden, Çukurhan’ı seçtik düğünümüz için:</strong> bu han, yalnızca tarihi bir yapı olmanın ötesinde, <strong>geçmiş ile gelecek arasında bir köprü</strong>, <em>kırgın ama bir o kadar da umut dolu</em> bir mekân. Çünkü burası, <em>sevinç ve hüzün gibi insani duyguların, yıllar boyu süregelen bir birikimin, taşlar arasında hapsolmuş çığlıkların ve fısıltıların</em> saklandığı bir yer.
+                    Haziran ayında burada gerçekleşecek olan düğünümüz, hanın duvarlarına kazınmış yüzlerce yıllık hikâyelere <strong>yepyeni bir anlatı</strong> ekleyecek; tıpkı bir ressamın tuvaline son dokunuşlarını yapması gibi, <em>hem titizlikle hem de büyük bir aşkla</em>.
+                    Düğünümüzün yapılacağı gün, Çukurhan’ın avlusunda, ağır taş sütunlar arasında süzülen ışık, misafirlerin yüzlerinde eski zamanların hikâyelerini canlandırırken, <strong>biz de yeni bir başlangıç</strong> yapacağız. Bu özel gün, hanın gördüğü nice mutlu ve hüzünlü günlerden sadece biri olacak ama belki de <strong>en kıymetlisi</strong>, çünkü <em>hikâyemiz bu tarihi mekânın duvarları arasında, zamana meydan okuyan bir aşkın yepyeni bir yankısı olarak kalacak</em>."</p>
                 </div>
             </div>
 
