--- a/index.html
+++ b/index.html
@@ -437,8 +437,7 @@
                     Sayfanın üst kısmındaki <strong>“Fotoğraf Paylaş”</strong> butonuna tıklayarak
                     <strong>sizin çektiğiniz</strong> fotoğraf ve videoları da bize iletebilirsiniz.  
                     Lütfen WhatsApp’ta <em>“Yüksek Kaliteli Gönder”</em> seçeneğini işaretleyin
-                    ve videolarınızı eklemeyi unutmayın. Emeğiniz bizim için çok değerli —
-                    şimdiden teşekkür ederiz!
+                    ve videolarınızı eklemeyi unutmayın. Emeğiniz bizim için çok değerli, şimdiden teşekkür ederiz!
                 </div>
             </div>
 
